Cleanup uneeded API for simulator
